src/LegalGPT/LegalGPT.module.css
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");

.container {
  padding: 12px 12px 12px 321px;
  height: 100%;
  background-color: black;
}

.formContainer {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
  padding: 40px;
  background-color: #222222;
}

.gptContainer {
  position: relative;
  height: 100%;
  width: 100%;
  background-color: #222222;
  color: white;
  border-radius: 16px;
  overflow: hidden;
}

.chatContainer div {
  font-family: "Inter";
}
.chatContainer {
  height: 100%;
  background: black;
}

.chatSubContainer {
  margin: 12px 12px 12px 321px;
  border: 1px solid white;
}

.prompts {
  position: relative;
  flex: 1;
  overflow-y: scroll;

  width: 90%;
  margin: auto;
  background-color: transparent;
}
.clawBackdrop {
  position: absolute;
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: flex-end;
  opacity: 0.1;
}
.clawBackdrop > img {
  background: transparent;
  max-height: 100%;
}
.prompts div {
  background-color: transparent;
}

.welcome {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-top: 100px;
  font-weight: 500;
  font-size: 34px;
}

.logo {
  width: 100px;
  height: 100px;
  border-radius: 50%;
  overflow: hidden;
  position: relative;
}

.logo img {
  position: absolute;
  top: 50%;
  left: 50%;
  width: 100%;
  height: auto;
  display: block;
  transform: translate(-50%, -50%);
}

.promptInput ::placeholder {
  color: rgba(255, 255, 255, 0.75);
}

.promptInput textarea {
  outline: none;
  border: none;
  resize: none;
  display: block;
  flex: 1;
}

.customPrompts {
  display: grid;
  width: 100%;
  padding: 20px 20px;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  gap: 10px;
}

.customPrompts > div {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 10px;
}

.customPrompt {
  width: 100%;
}

.customPrompt > button {
  width: 100%;
  display: "flex";
  color: "white";
  background-color: rgba(103, 48, 192, 255) !important;
  position: relative;
  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
  align-items: "center";
  border-radius: 10px;
  border: none;
  background: none;
  padding: 20px 30px;
  justify-content: "center";
}

.sendCustomPrompt {
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 0;
  padding-left: 10px;
  padding-right: 10px;
  position: absolute;
  bottom: 0;
  right: 0;
  height: 100%;
}
.sendCustomPrompt span {
  border-radius: 5px;
  padding: 4px 8px;
}

.customPrompt button:hover .sendCustomPrompt {
  opacity: 100;
}

.customPromptsContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  gap: 10;
}
.subContainer {
  width: 80%;
  margin: auto;
  z-index: 2;
}

@media only screen and (max-width: 768px) {
  .gptContainer {
    border-radius: 0;
  }
  .formContainer {
    padding: 25px 5px 40px 5px;
  }
  .container {
    padding: 0;
  }
  .sidebar {
    display: none;
  }
  .customPromptsContainer {
    display: none;
  }
  .subContainer {
    width: 100%;
    margin: 0;
  }
  .prompts {
    padding: 0;
  }
  .clawBackdrop > img {
    width: 100%;
  }
}

/* Scrollbar Styling */
.prompts::-webkit-scrollbar {
  width: 10px;
}

.prompts::-webkit-scrollbar-track {
  background-color: #ebebeb;
  -webkit-border-radius: 10px;
  border-radius: 10px;
}

.prompts::-webkit-scrollbar-thumb {
  -webkit-border-radius: 10px;
  border-radius: 10px;
  background: #8d8d8d;
}

